--- a/HrProject/src/main/web/css/main.css
+++ b/HrProject/src/main/web/css/main.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     background: gainsboro; font-family: "微软雅黑",Verdana;
 
@@ -5,12 +9,35 @@ body{
 img{
     vertical-align: middle;
 }
-.head{border:0px;
+.head{
+    margin: 0 auto;
     background: #ffffff;
+    width: 960px;
+
     position:relative;z-index: 3;
 }
 .head .container{
     height:113px;
     padding-top:20px;
-    width: 1100px;
+    width:960px;
+}
+#content{
+    background-color: gainsboro;
+    width: 960px;
+    height: 800px;
+    margin: 20px auto;
+
+}
+.left{
+    background-color: orange;
+    float: left;
+    width: 255px;
+    height: 100%;
+
+}
+.right{
+    background-color:#ccffaa;
+    float: right;
+    width: 705px;
+    height: 100%;
 }
